Remove dependency on commons-io
Signed-off-by: Wouter Born <github@maindrain.net>